--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,16 @@
   <head>
     <title>hi</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
 
   <body>
-    <div id="app"></div>
-
-    <script src="./index.mjs" type="module"></script>
+    <p>hello</p>
+    <div id="outer">
+      <div id="middle">
+        <div id="inner">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
